--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/AjustesAnticipo/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/AjustesAnticipo/Index.cshtml
@@ -63,6 +63,11 @@
                     </div>
                 </div>
             </div>
+
+            <div class="box-footer">
+                <button type="button" class="btn btn-default" id="btn_buscar" onclick="cargar_empleados();">Buscar</button>
+                <button type="submit" class="btn btn-primary" id="btn_guardar">Guardar</button>
+            </div>s
         </div>
         <!-- /.box-body -->
     </div>
