--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/AjustesAnticipo/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/AjustesAnticipo/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @model Core.Erp.Info.Helps.cl_filtros_Info
 @{
-    ViewBag.Title = "Novedades por empleados";
+    ViewBag.Title = "Ajustar anticipo";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
         Response.Redirect("~/Account/Login");
@@ -67,7 +67,7 @@
             <div class="box-footer">
                 <button type="button" class="btn btn-default" id="btn_buscar" onclick="cargar_empleados();">Buscar</button>
                 <button type="submit" class="btn btn-primary" id="btn_guardar">Guardar</button>
-            </div>s
+            </div>
         </div>
         <!-- /.box-body -->
     </div>
