--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/AjustesAnticipo/_GridViewPartial_ajuste_anticipo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/AjustesAnticipo/_GridViewPartial_ajuste_anticipo.cshtml
@@ -5,21 +5,23 @@
     {
         settings.Name = "GridViewPartial_ajuste_anticipo";
         settings.CallbackRouteValues = new { Controller = "AjustesAnticipo", Action = "GridViewPartial_ajuste_anticipo" };
-        settings.KeyFieldName = "IdArchivo";
+        settings.KeyFieldName = "IdEmpleado";
         settings.Width = Unit.Percentage(100);
 
 
-        //settings.SettingsEditing.Mode = GridViewEditingMode.Inline;
-        //settings.SettingsEditing.UpdateRowRouteValues = new { Controller = "ArchivosTransferencias", Action = "EditingUpdate", Area = "RRHH" };
-        //settings.SettingsEditing.DeleteRowRouteValues = new { Controller = "ArchivosTransferencias", Action = "EditingDelete", Area = "RRHH" };
+        settings.SettingsEditing.Mode = GridViewEditingMode.EditFormAndDisplayRow;
+        settings.SettingsEditing.UpdateRowRouteValues = new { Controller = "AjustesAnticipo", Action = "EditingUpdate", Area = "RRHH" };
 
         settings.CommandColumn.Visible = false;
-        settings.CommandColumn.ShowEditButton = false;
+        settings.CommandColumn.ShowNewButton = false;
+        settings.CommandColumn.ShowEditButton = true;
         settings.CommandColumn.ShowDeleteButton = false;
-        settings.Settings.ShowFooter = true;
 
-        //settings.SettingsContextMenu.Enabled = true;
-        //settings.SettingsBehavior.EnableCustomizationWindow = true;
+        settings.SettingsContextMenu.Enabled = true;
+        settings.SettingsContextMenu.RowMenuItemVisibility.NewRow = false;
+        settings.SettingsContextMenu.RowMenuItemVisibility.EditRow = true;
+        settings.SettingsContextMenu.RowMenuItemVisibility.DeleteRow = false;
+        settings.SettingsBehavior.EnableCustomizationWindow = true;
 
         settings.SettingsPager.Visible = true;
         settings.Settings.ShowGroupPanel = false;
@@ -49,10 +51,12 @@
                 sp.Width = Unit.Percentage(100);
 
             });
+            column.EditFormSettings.Visible = DefaultBoolean.False;
+
         });
         settings.Columns.Add(column =>
         {
-            column.FieldName = "pe_nombreCompleto";
+            column.FieldName = "pe_nombreCompleato";
             column.Caption = "Nombres";
             column.Width = Unit.Percentage(40);
             column.EditorProperties().TextBox(sp =>
@@ -60,28 +64,7 @@
                 sp.Width = Unit.Percentage(100);
 
             });
-        });
-        settings.Columns.Add(column =>
-        {
-            column.FieldName = "em_tipoCta";
-            column.Caption = "Tipo cta.";
-            column.Width = Unit.Percentage(10);
-            column.EditorProperties().TextBox(sp =>
-            {
-                sp.Width = Unit.Percentage(100);
-
-            });
-        });
-        settings.Columns.Add(column =>
-        {
-            column.FieldName = "em_NumCta";
-            column.Caption = "# cuenta";
-            column.Width = Unit.Percentage(10);
-            column.EditorProperties().TextBox(sp =>
-            {
-                sp.Width = Unit.Percentage(100);
-
-            });
+            column.EditFormSettings.Visible =DefaultBoolean.False;
         });
 
 
@@ -98,37 +81,19 @@
 
             });
         });
-
         settings.Columns.Add(column =>
         {
-            column.FieldName = "ValorCancelado";
-            column.Caption = "Total cancelado";
-            column.Width = Unit.Percentage(10);
-            column.EditorProperties().SpinEdit(sp =>
+            column.FieldName = "check";
+            column.Caption = "Ajustado";
+            column.Width = System.Web.UI.WebControls.Unit.Percentage(5);
+            column.EditorProperties().CheckBox(sp =>
             {
-                sp.MinValue = 0;
-                sp.MaxValue = 999999999;
-                sp.Width = Unit.Percentage(100);
 
             });
-        });
+            column.EditFormSettings.Visible = DefaultBoolean.False;
 
-        settings.Columns.Add(column =>
-        {
-            column.FieldName = "Saldo";
-            column.Caption = "Saldo";
-            column.Width = Unit.Percentage(10);
-            column.EditorProperties().SpinEdit(sp =>
-            {
-                sp.MinValue = 0;
-                sp.MaxValue = 999999999;
-                sp.Width = Unit.Percentage(100);
-
-            });
         });
         settings.TotalSummary.Add(DevExpress.Data.SummaryItemType.Sum, "Valor");
-        settings.TotalSummary.Add(DevExpress.Data.SummaryItemType.Sum, "ValorCancelado");
-        settings.TotalSummary.Add(DevExpress.Data.SummaryItemType.Sum, "Saldo");
 
     });
 
