--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/SolicitudPago/_GridViewPartial_solicitud_pago.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/SolicitudPago/_GridViewPartial_solicitud_pago.cshtml
@@ -85,8 +85,8 @@
             c.Width = Unit.Pixel(150);
         });
         settings.Columns.Add("IdSolicitud", "Id").Width = Unit.Percentage(10);
-        settings.Columns.Add("Concepto", "Descripción").Width = Unit.Percentage(15);
-        settings.Columns.Add("Solicitante", "Solicitante").Width = Unit.Percentage(25);
+        settings.Columns.Add("Concepto", "Descripción").Width = Unit.Percentage(30);
+        settings.Columns.Add("Solicitante", "Solicitante").Width = Unit.Percentage(30);
         settings.Columns.Add(column =>
         {
             column.FieldName = "Fecha";
@@ -99,6 +99,7 @@
                 sp.Width = Unit.Percentage(100);
             });
         });
+        settings.Columns.Add("Valor", "Valor").Width = Unit.Percentage(10);
         settings.Columns.Add(column =>
         {
             column.FieldName = "Estado";
