--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/TipoNota/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/TipoNota/Nuevo.cshtml
@@ -28,6 +28,17 @@
         <div class="col-md-6">
             <div class="col-md-12">
                 <div class="form-group">
+                    <label for="IdCtaCble">Cuenta contable*</label>
+                    @Html.Partial("_CmbCuenta_TipoNota", Model)
+                    @Html.ValidationMessageFor(q => q.IdCtaCble, "", new { @class = "text-danger" })
+                </div>
+            </div>
+       </div>
+
+
+        <div class="col-md-6">
+            <div class="col-md-12">
+                <div class="form-group">
                     <label for="Tipo">Tipo*</label>
                     @Html.DropDownListFor(q => q.Tipo, new SelectList(ViewBag.lst_tipos, "Key", "Value"), new { @class = "form-control", @id = "Tipo" })
                     @Html.ValidationMessageFor(q => q.Tipo, "", new { @class = "form", @role = "text-danger" })
@@ -52,15 +63,6 @@
                     <label for="No_Descripcion">Descripción*</label>
                     @Html.TextBoxFor(q => q.No_Descripcion, new { @class = "form-control" })
                     @Html.ValidationMessageFor(q => q.No_Descripcion, "", new { @class = "form", @role = "text-danger" })
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-md-12">
-            <div class="col-md-12">
-                <div class="form-group">
-                    @Html.Action("GridViewPartial_tipo_nota_sucursal")
                 </div>
             </div>
         </div>
