--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/HorarioPlanificacion/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/HorarioPlanificacion/Nuevo.cshtml
@@ -278,7 +278,8 @@
                      IdArea: IdArea.GetValue(),
                      IdDepartamento: IdDepartamento.GetValue(),
                      IdCargo: IdCargo.GetValue(),
-                     IdHorario: IdHorario.GetValue()
+                     IdHorario: IdHorario.GetValue(),
+                     IdEmpleado: IdEmpleado.GetValue()
 
 
                 }
