--- a/ERP/Core.Erp.Web/Areas/Caja/Views/ConciliacionCaja/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Caja/Views/ConciliacionCaja/Nuevo.cshtml
@@ -125,8 +125,8 @@
     function AddCajaMovimiento()
     {
         var datos = {
-            IDs: selectedCajaIDs,
-            IdTransaccionFixed: $("#IdTransaccionSession").val()
+            Ids: selectedCajaIDs,
+            IdTransaccionSession: $("#IdTransaccionSession").val()
         }
         $.ajax({
             type: 'POST',
@@ -142,10 +142,10 @@
             error: function (error) {
             }
         });
-        selectedCajaIDs = "";
+
         GridViewPartial_conciliacion_caja_movimiento.PerformCallback();
         GridViewPartial_conciliacion_caja_movimiento.UnselectRows();
-
+        GridViewPartial_conciliacion_vales.PerformCallback();
         $("#CajaMovimientoModal").modal("hide");
     }
 
@@ -355,7 +355,6 @@
                     <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
                 </div>
             </div>
-
         </div>
     </div>
 
